# Artimis

./: .env.example  .gitignore  .vercelignore  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  pyproject.toml  reddit_lead_gen.py  requirements.txt  tsconfig.json  vercel.json
alembic/: env.py
alembic/versions/: 6a9bd4ba55c2_initial_schema.py  81985b34dbae_add_ai_logs_table.py
api/: index.py
frontend/: README.md
frontend/src/app/: layout.tsx
frontend/src/app/leads/[id]/: page.tsx
frontend/src/shared/lib/: api.ts
frontend/src/shared/ui/: app-shell.tsx  run-agent-form.tsx
src/app/: globals.css  page.tsx
src/app/leads/: page.tsx
src/app/settings/: page.tsx
src/lead_engine/: analyzer.py  cli.py  config.py  database.py  engine.py  models.py  notifiers.py  reddit_client.py
src/lead_engine/api/: deps.py  main.py  scheduler_manager.py
src/lead_engine/api/routers/: config.py  leads.py  scheduler.py
src/lead_engine/api/schemas/: leads.py
src/shared/lib/: api.ts
src/shared/ui/: scan-button.tsx  scheduler-controls.tsx
