[project]
name = "lead-engine"
version = "0.1.0"
description = "Simplified Reddit Lead Generation System"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Artemis" }]

dependencies = [
    "fastapi[standard]>=0.115",
    "uvicorn[standard]>=0.30",
    "requests>=2.31",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "apscheduler>=3.11.2",
    "motor>=3.7.1",
    "dnspython>=2.8.0",
]

[project.scripts]
reddit-leadgen = "reddit_lead_gen:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lead_engine"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "RET", "RUF"]
ignore = ["E501"]
